Versión con carga de empresas

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                     <div class="clear"></div>
                 </div>
             </div>
+            <div class="clear"></div>
         </div><!-- end main-content -->
 
         <div id="footer">
