--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="js/jquery-ui-1.8.20.custom.min.js"></script>
     <script type="text/javascript" src="js/jquery.qtip.min.js"></script>
     <script type="text/javascript" src="js/jquery.anythingslider.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/jquery.user.composer.js"></script>
+    <script type="text/javascript" src="js/jquery.composer.user.js"></script>
 
 </head>
 
