--- a/offerWizard.html
+++ b/offerWizard.html
@@ -148,7 +148,7 @@
                           </div>
                           
                       </div>
-                      <div id="step-4">
+                      <div id="step-4"style="overflow: auto">
                           <h2 class="StepTitle">Resumen de la oferta creada</h2>   
                            <div class="skill-level-closure">
                             <label >Nombre de la oferta:  </label>Episteme UI
