Nueva versión del wizard finalizada

--- a/LMF/form_local.html
+++ b/LMF/form_local.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form name="input" action="http://localhost:8080/LMF/sparql/update" method="get" >
+<form name="input" action="http://shannon.gsi.dit.upm.es/episteme/lmf/sparql/update" method="get" >
 First name: <input type="text" name="query" value="" size="500"/><br />
 <input type="submit" value="Submit" />
 </form> 
