--- a/LMF/uploader.html
+++ b/LMF/uploader.html
@@ -26,30 +26,30 @@ function request(){
 	<gsi:endDate>31-12-2012</gsi:endDate>\
 	<gsi:companyReq rdf:parseType="Resource">\
 	<ecos:Preference rdf:parseType="Resource">\
-	<gsi:field>Web development</gsi:field>\
-	<ecos:weight>0.5</ecos:weight>\
+	<gsi:field>Paneles solares</gsi:field>\
+	<ecos:weight>Avanzado</ecos:weight>\
 	</ecos:Preference>\
 	<ecos:Preference rdf:parseType="Resource">\
-	<gsi:field>Madrid</gsi:field>\
-	<ecos:weight>0.25</ecos:weight>\
+	<gsi:field>Calderas</gsi:field>\
+	<ecos:weight>Experto</ecos:weight>\
 	</ecos:Preference >\
 	<ecos:Preference rdf:parseType="Resource">\
-	<gsi:field>University</gsi:field>\
-	<ecos:weight>0.25</ecos:weight>\
+	<gsi:field>Energía fotovoltaica</gsi:field>\
+	<ecos:weight>Experto</ecos:weight>\
 	</ecos:Preference>\
 	</gsi:companyReq>\
 	<gsi:companyReq rdf:parseType="Resource">\
 	<ecos:Preference rdf:parseType="Resource">\
-	<gsi:field>Big Data</gsi:field>\
-	<ecos:weight>0.25</ecos:weight>\
+	<gsi:field>Telefonía IP</gsi:field>\
+	<ecos:weight>Básico</ecos:weight>\
 	</ecos:Preference>\
 	<ecos:Preference rdf:parseType="Resource">\
-	<gsi:field>Barcelona</gsi:field>\
-	<ecos:weight>0.5</ecos:weight>\
+	<gsi:field>Automatización</gsi:field>\
+	<ecos:weight>Avanzado</ecos:weight>\
 	</ecos:Preference>\
 	<ecos:Preference rdf:parseType="Resource">\
-	<gsi:field>Databases</gsi:field>\
-	<ecos:weight>0.25</ecos:weight>\
+	<gsi:field>Pararrayos</gsi:field>\
+	<ecos:weight>Experto</ecos:weight>\
 	</ecos:Preference>\
 	</gsi:companyReq>\
 	</rdf:Description>\
